* PathMatchingResourcePatternResolver derives from ClassPathResourcePatternResolver to inherit its behavior

Package org.springframework.dao
* fixed DataAccessUtils' "requiredUniqueResult" method, to correctly throw an IncorrectResultSizeDataAccessException

Package org.springframework.jdbc
* DataSourceUtils' "closeConnectionIfNecessary" logs error on SQLException rather than rethrowing an exception
* removed CannotCloseJdbcConnectionException, as it is not used anymore
* DataSourceTransactionManager closes JDBC Connection if "doBegin" fails
* DataSourceTransactionManager manages nested transactions via JDBC 3.0 Savepoints
* DataSourceTransactionObject implements SavepointManager to allow for savepoint management via TransactionStatus
* refactored Prepared/CallableStatement.setXxx method invocations into JdbcUtils.setParameters utility method
* JdbcTemplate always passes SQL string to SQLExceptionTranslator, even for static queries and updates
* added support for BLOB/CLOB parameters to SqlUpdate and StoredProcedure
* added BatchSqlUpdate class to jdbc.object package, for convenient execution of batch updates
* adapted CommonsDbcpNativeJdbcExtractor for Commons DBCP 1.2, to support both DBCP 1.1 and 1.2
* rewrote JBossNativeJdbcExtractor with reflection, to also support ResultSet unwrapping for JBoss 3.2.4
* added WebSphereNativeJdbcExtractor, using WSJdbcUtil's "getNativeConnection" method (tested with WLS 5.1.0)

Package org.springframework.mail
* added "replyTo" and "sentDate" bean properties to SimpleMailMessage, understood by JavaMailSenderImpl
* added "setReplyTo" and "setSentDate" methods to MimeMessageHelper, analogous to SimpleMailMessage
* added accessors for "session", "protocol", "host", "port", "username", "password" to JavaMailSenderImpl

Package org.springframework.mock
* MockServletContext uses JVM temp dir as ServletContext temp dir, e.g. to work with Commons/CosMultipartResolver

Package org.springframework.orm